manifests/apps/pechka/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pechka-ingress
  namespace: pechka
  annotations:
    cert-manager.io/cluster-issuer: "ca-clusterissuer"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - pechka.nuage.cluster.wpc
      secretName: pechka-tls-secret
  rules:
    - host: pechka.nuage.cluster.wpc
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
